# QObjectProxyExample

./: .gitmodules  CMakeLists.txt
Include/QObjectProxyExample/: MyModelClass.h  MyModelQObjectProxy.h
Src/: MyModelClass.cpp  MyModelQObjectProxy.cpp
Tests/: CMakeLists.txt  ProxyTests.cpp
